# model/model_conf.go
@@ -8,3 +8,10 @@ type Config struct {
 	Database string `yaml:"database"`
 	Secret   string `yaml:"secret"`
 }
+
+// ApiResponse 用户生成swagger文档
+type ApiResponse struct {
+	Code int         `json:"code"`
+	Data interface{} `json:"data"`
+	Msg  string      `json:"msg"`
+}
